external-crates/move/crates/move-compiler/tests/move_check/expansion/unpack_assign_block_expr.exp
error[E04016]: too few arguments
  ┌─ tests/move_check/expansion/unpack_assign_block_expr.move:4:9
  │
4 │         S { let f = 0; } = S { f: 0 };
  │         ^^^^^^^^^^^^^ Missing argument for field 'f' in '0x42::M::S'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/unpack_assign_block_expr.move:4:13
  │
4 │         S { let f = 0; } = S { f: 0 };
  │             ^ Expected a field expression

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/unpack_assign_block_expr.move:4:22
  │
4 │         S { let f = 0; } = S { f: 0 };
  │           -          ^ Expected '}'
  │           │           
  │           To match this '{'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/unpack_assign_block_expr.move:4:26
  │
4 │         S { let f = 0; } = S { f: 0 };
  │                          ^
  │                          │
  │                          Unexpected '='
  │                          Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

